blogpagestyle.css
/* ... */
nav {
  margin-right: 30px;
}
.logo {
  font-size: 2.5rem;
  color: var(--txt-color);
  font-weight: 600;
  cursor: default;
}
.navbar a {
  /* position: relative; */
  font-size: 3rem;
  /* left: 118px; */
  color: var(--txt-color);
  margin-left: 4rem;
  transition: 0.3s;
}
.navbar a:hover {
  color: var(--main-color);
}
.navbar a:not(.active):hover {
  color: var(--main-color);
}

.navbar a.active,
.navbar a.active:hover {
  color: var(--main-color);
}
.navbar.active {
  display: block;
}
.logoImg {
  width: 80px;
  height: auto; /* Use auto to maintain aspect ratio */
  max-width: 100%;

  margin-right: 5px; /* Adjust margin as needed */
}
#backtoTop{
  position :fixed;
  bottom: 90px;
  right: 24px;
  height: 60px;
  width: 60px;
  background-color: #B19222;
  border-radius:50%;
  margin-bottom: 10px;
  justify-content: center;
  align-items: center;
  z-index: 1000;
  display: none; 
  transition: background-color 0.5s ease-in 0.3s;
}
#backtoTop a{
  display: inline-block;
height: 100%;
width: 100%;
 border-radius: 50%;
 justify-content: center;
 align-items: center;
  transition: 0.5s ease;
  padding: 1.2rem;

}
#backtoTop a:hover{
background-color: #a48613;
}
#backtoTop a i {
font-size: 36px;
  color: white;
}
.footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex: wrap;
  flex-direction: column;
  padding: 1 rem;
  background: #053314;
  min-height: 25rem;
}
.footer p {
  font-size: 1.6rem;
  font-weight: bold;
}
.footer-title {
  font-weight: 500;
  font-size: 20px;
}
.footer-right {
  text-align: center;
}
.footer-grid {
  display: flex;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
  justify-items: center;
  align-items: center;
  flex-direction: column;
  flex-wrap: nowrap;
}

.footer {
  padding: 20px;
  background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)),
    url("./images/istockphoto-1465642013-170667a.webp");
  background-size: cover; /* Ensure the background image covers the entire container */
  background-position: center; /* Center the background image */
  background-repeat: no-repeat; /* Prevent the background image from repeating */
  color: #fff;
}

.footer-title {
  text-align: center;
}
.footer-icons {
  text-align: center;
}
.footer-text {
  text-align: center;
  margin-top: 10px;
}
.socialIcons a:hover
{
  transform: scale(1.3);
}
@media (max-width: 991px) {
  .footer {
    padding: 2rem 3%;
  }
}
.socialIcons a {
  padding: 1.3rem;
  background: var(--main-color);
  border-radius: 100%;
  transition: 0.5s ease;
  margin: 15px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: 10px;
}
.socialIcons i {
  color: var(--second-color);
  font-size: 22px;
  font-size: 22px;
}

.socialIcons {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: 10px;
  padding: 1.2rem;
  margin-top: 10px;
}

.socialIcons a:hover {
  background: var(--main-color);
  color: var(--second-color);
  box-shadow: 0 0 1rem var(--main-color);
}

.quick-links {
  text-align: center;
  width: 50vw;
  padding: 20px;
  font-weight: 700;
}

.quick-links h2 {
  font-size: 20px;
  margin-bottom: 15px;
}
.quick-links ul {
  list-style-type: none;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.quick-links li {
  margin-bottom: 8px;
}

.quick-links a {
  text-decoration: none;
  color: #fff;
  transition: color 0.3s ease;
  font-size: 1.5rem;
}

.quick-links a:hover {
  color: #abf5c0; /* Change color on hover */
  /* text-decoration: underline; */
  animation: blink 1s step-start infinite;
  text-shadow: 0 0 5px currentColor;
}

@keyframes blink {
  50% {
    text-shadow: 
      0 0 10px rgba(255, 255, 255, 0.8), /* White glow */
      0 0 20px rgba(255, 0, 0, 0.7),     /* Red glow */
      0 0 30px rgba(255, 0, 255, 0.6);   /* Pink glow */
  }
  100% {
    text-shadow: none;
  }
}

@media (max-width: 768px) {
  .footer-grid {
    grid-template-columns: 1fr;

    .socialIcons {
      gap: 0;
      padding: 1rem;
    }
    .quick-links li {
      margin-bottom: 0;
    }
    .quick-links ul {
      flex-direction: column;
    }
  }
}


.header img{
  height: 6rem;
  margin-right: 2rem;
}
.logo {
  font-size: 2vmax;
  color: var(--txt-color);
  font-weight: 600;
  margin-right: 0;
  cursor: default;
}
.navbar a {
  font-size: 1.5vmax;

 }
 section
 {
   min-height: 100vh;
   padding: 10rem 9% 2rem;
 }
 .header
 {
  position: fixed;
  opacity: 0.8;
   top: 0;
   left: 0;
   width:100%;
   padding:2rem 9%;
   background-color: var(--bg-color);
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 100;
   transition: all 0.8s;
 }
 .header.sticky
 {
  opacity: 0.9;
  padding: 2rem 10% 2rem 5%; /* Adjusted padding to ensure space for the sign-in button */
  background-color: rgb(4, 125, 18);
  box-shadow: 0 0 1.5px 2px rgb(14, 14, 14,0.8);
 }

 nav{
  margin-right: 30px;
}
 .logo
 {
    font-size: 2.5rem;
    color: var(--txt-color);
    font-weight: 600;
    cursor: default;
 }
 .navbar a {
  /* position: relative; */
  font-size: 1.4rem;
  /* left: 118px; */
  color: var(--txt-color);
  margin-left: 3rem;
  transition: 0.3s;
}
.navbar a:hover {
  color: var(--main-color);
}
.navbar a:not(.active):hover {
  color: var(--main-color);
}


.navbar a.active,
.navbar a.active:hover {
  color: var(--main-color);
}
  .navbar.active {
  display: block;
}
.logoImg {
  width: 80px;
  height: auto; /* Use auto to maintain aspect ratio */
  max-width: 100%;

  margin-right: 5px; /* Adjust margin as needed */
}

#menu-icon {
  font-size: 3.6rem;
  color: var(--txt-color);
  display: none;
}


@media (min-width: 1216px){

  .navbar {
    position: absolute;
    margin-left: 350px;
    width: 100%;
    display: inline-block;   
  }

}
/* ... */

